fixed top part of mobile cutting off

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 html, body {
   background-color: black;
   color: white;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
+  min-height: 100%;
   font-size: 62.5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px;
+  margin: 0px;
 }
 
 main {
@@ -14,10 +17,9 @@ main {
   height: 100%;
 }
 
-section {
+.projects {
   max-width: 100vw;
   margin: 0px;
-  padding: 0px;
   display: flex;
   justify-content: center;
   padding: 80px 0px;
@@ -30,6 +32,7 @@ section {
   list-style: none;
   max-width: 1600px;
   margin: 0px 60px;
+  padding: 0px;
 }
 
 .project {
@@ -38,16 +41,16 @@ section {
   border-top: 1px solid #B59EE6;
   border-bottom: 1px solid #B59EE6;
   margin: 40px 80px;
-  padding: 0px 40px;
+  padding: 50px 40px;
   text-align: center;
 }
 
 h2 {
   /* font-family: 'Exo', sans-serif; */
   font-family: 'Space Mono', monospace;
-  margin: 45px 0px;
+  margin: 0px;
   font-size: 5rem;
-  line-height: 100%;
+  line-height: 150%;
   letter-spacing: 3px;
   text-transform: uppercase;
 }
@@ -56,7 +59,7 @@ h3 {
   font-family: 'Space Mono', monospace;
   line-height: 175%;
   font-size: 2.2rem;
-
+  margin: 45px 0px;
 }
 
 p {
@@ -64,47 +67,7 @@ p {
   line-height: 200%;
   font-size: 1.8rem;
   letter-spacing: 0.4px;
-  margin: 40px 0px;
-}
-
-@media screen and (max-width: 1250px) {
-	.projects-list {
-		flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    padding: 0px;
-    margin: 0px;
-    max-width: 90%;
-	}
-
-  .project {
-    width: 550px;
-    margin: 30px 0px;
-    border: none;
-  }
-
-  .divider {
-    width: 630px;
-    max-width: 90%;
-    border-top: 2px solid #B59EE6;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  h2 {
-    font-size: 3.8rem;
-    margin: 35px 0px;
-  }
-
-  h3 {
-    font-size: 1.85rem;
-  }
-
-  p {
-    font-size: 1.6rem;
-    line-height: 175%;
-    margin: 30px 25px;
-  }
+  margin: 0px;
 }
 
 a {
@@ -123,3 +86,90 @@ a:hover {
   text-decoration: wavy overline;
 }
 
+/* 2K */
+@media screen and (max-width: 1480px) {
+  .project {
+    padding: 40px;
+  }
+
+  h2 {
+    font-size: 3.5rem;
+  }
+
+  h3 {
+    font-size: 1.9rem;
+    margin: 35px 0px;
+  }
+
+  p {
+    font-size: 1.5rem;
+  }
+}
+
+/* Small screens */
+@media screen and (max-width: 1250px) {
+  .projects {
+    padding: 30px 0px;
+  }
+
+  .projects-list {
+		flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 0px;
+    margin: 0px;
+    max-width: 90%;
+	}
+
+  .project {
+    width: 580px;
+    margin: 60px 0px;
+    padding: 0px;
+    border: none;
+  }
+
+  .divider {
+    width: 580px;
+    border-top: 2px solid #B59EE6;
+    max-width: 90%;
+  }
+
+  h2 {
+    font-size: 3.8rem;
+  }
+
+  h3 {
+    font-size: 1.9rem;
+    margin: 35px 0px;
+  }
+
+  p {
+    font-size: 1.6rem;
+    line-height: 175%;
+  }
+}
+
+/* Mobile */
+@media screen and (max-width: 550px) {
+  .projects {
+    padding: 0px;
+    margin: 0px 0px;
+  }
+
+  h2 {
+    font-size: 3rem;
+  }
+
+  h3 {
+    font-size: 1.8rem;
+    margin: 25px 0px;
+    line-height: 200%;
+
+  }
+
+  p {
+    font-size: 1.5rem;
+    line-height: 225%;
+
+  }
+}
